--- a/cal.html
+++ b/cal.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 	<title>My Calculator</title>
-	<link rel="stylesheet" type="text/css" href="css/calc.css" />
+	<link rel="stylesheet" type="text/css" href="CSS/calc.css" />
 	<Script src="js/calc.js"></Script>
 	</head>
 	<body>
